src/GrammarInitParser.java
// Generated from C:/Users/kasia/IdeaProjects/kompilatorki_java/antlr4\GrammarInit.g4 by ANTLR 4.10.1
package antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarInitParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, MINUS=2, MULTIPLY=3, DIVIDE=4, PROCENT=5, INCREMENT=6, DECREMENT=7, 
		AND=8, OR=9, NOT=10, ASSIGN=11, ASSIGN_ADD=12, ASSIGN_MINUS=13, ASSIGN_MULTIPLY=14, 
		ASSIGN_DIVIDE=15, ASSIGN_PERCENT=16, EQUALS=17, NOT_EQUALS=18, SMALLER=19, 
		BIGGER=20, SMALLER_OR_EQUAL=21, BIGGER_OR_EQUAL=22, LEFT_INDEX=23, RIGHT_INDEX=24, 
		LEFT_BRACKET=25, RIGHT_BRACKET=26, LEFT_CURVY_BRACKET=27, RIGHT_CURVY_BRACKET=28, 
		DELI=29, DOT=30, NL=31, NL2=32, NL3=33, PACKAGE=34, IMPORT=35, CLASS=36, 
		FUN=37, OBJECT=38, VAL_INIT=39, VAR_INIT=40, CONSTRUCTOR=41, BY=42, THIS=43, 
		WHERE=44, IF_INIT=45, ELSE_INIT=46, WHEN=47, TRY_INIT=48, CATCH_INIT=49, 
		FOR_INIT=50, DO_INIT=51, WHILE_INIT=52, THROW_INIT=53, RETURN_INIT=54, 
		CONT_INIT=55, BREAK_INIT=56, AS=57, IS=58, IN=59, NOT_IS=60, NOT_IN=61, 
		OUT=62, DYNAMIC=63, PUBLIC=64, PRIVATE=65, PROTECTED=66, INTERNAL=67, 
		ENUM=68, OVERRIDE=69, OPEN=70, LATEINIT=71, IT=72, NULL=73, BooleanLiteral=74, 
		SPACE=75, COMM=76, COM=77, DOWNTO=78, STEP=79, DOTDOT=80, STRING=81, INT=82, 
		COLON=83, PRINTLN=84, EscapedIdentifier=85, Liczba_calk=86, Nazwa=87, 
		Char=88, String=89, Liczba_zmiennoprzecin=90;
	public static final int
		RULE_startowy = 0, RULE_condition = 1, RULE_assignment = 2, RULE_if_stat = 3, 
		RULE_else_stat = 4, RULE_while_loop = 5, RULE_for_loop = 6, RULE_for_inside = 7, 
		RULE_do_while_loop = 8, RULE_function_body = 9, RULE_function = 10, RULE_try_catch_stat = 11, 
		RULE_return_stat = 12, RULE_komentarz_poj = 13, RULE_komentarz_wiel = 14, 
		RULE_instruction = 15, RULE_classDeclaration = 16, RULE_variable = 17, 
		RULE_class_body = 18, RULE_function_call = 19, RULE_argument_list = 20, 
		RULE_fun_arg = 21, RULE_type = 22, RULE_println = 23, RULE_decrement = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"startowy", "condition", "assignment", "if_stat", "else_stat", "while_loop", 
			"for_loop", "for_inside", "do_while_loop", "function_body", "function", 
			"try_catch_stat", "return_stat", "komentarz_poj", "komentarz_wiel", "instruction", 
			"classDeclaration", "variable", "class_body", "function_call", "argument_list", 
			"fun_arg", "type", "println", "decrement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'&&'", "'||'", 
			"'!'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", "'!='", 
			"'<'", "'>'", "'\\u00E2\\u2021\\uFFFD'", "'>='", "'['", "']'", "'('", 
			"')'", "'{'", "'}'", "','", "'.'", "'\\n'", "'\\r'", "'\\t'", "'package'", 
			"'import'", "'class'", "'fun'", "'object'", "'val'", "'var'", "'constructor'", 
			"'by'", "'this'", "'where'", "'if'", "'else'", "'when'", "'try'", "'catch'", 
			"'for'", "'do'", "'while'", "'throw'", "'return'", "'continue'", "'break'", 
			"'as'", "'is'", "'in'", "'!is'", "'!in'", "'out'", "'dynamic'", "'public'", 
			"'private'", "'protected'", "'internal'", "'enum'", "'override'", "'open'", 
			"'lateinit'", "'it'", "'null'", null, "' '", "'\\u00E2\\u20AC\\u017E'", 
			"'`'", "'downTo'", "'step'", "'..'", "'String'", "'Int'", "':'", "'println'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "PROCENT", "INCREMENT", 
			"DECREMENT", "AND", "OR", "NOT", "ASSIGN", "ASSIGN_ADD", "ASSIGN_MINUS", 
			"ASSIGN_MULTIPLY", "ASSIGN_DIVIDE", "ASSIGN_PERCENT", "EQUALS", "NOT_EQUALS", 
			"SMALLER", "BIGGER", "SMALLER_OR_EQUAL", "BIGGER_OR_EQUAL", "LEFT_INDEX", 
			"RIGHT_INDEX", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_CURVY_BRACKET", 
			"RIGHT_CURVY_BRACKET", "DELI", "DOT", "NL", "NL2", "NL3", "PACKAGE", 
			"IMPORT", "CLASS", "FUN", "OBJECT", "VAL_INIT", "VAR_INIT", "CONSTRUCTOR", 
			"BY", "THIS", "WHERE", "IF_INIT", "ELSE_INIT", "WHEN", "TRY_INIT", "CATCH_INIT", 
			"FOR_INIT", "DO_INIT", "WHILE_INIT", "THROW_INIT", "RETURN_INIT", "CONT_INIT", 
			"BREAK_INIT", "AS", "IS", "IN", "NOT_IS", "NOT_IN", "OUT", "DYNAMIC", 
			"PUBLIC", "PRIVATE", "PROTECTED", "INTERNAL", "ENUM", "OVERRIDE", "OPEN", 
			"LATEINIT", "IT", "NULL", "BooleanLiteral", "SPACE", "COMM", "COM", "DOWNTO", 
			"STEP", "DOTDOT", "STRING", "INT", "COLON", "PRINTLN", "EscapedIdentifier", 
			"Liczba_calk", "Nazwa", "Char", "String", "Liczba_zmiennoprzecin"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarInit.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarInitParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartowyContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarInitParser.EOF, 0); }
		public StartowyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startowy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterStartowy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitStartowy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitStartowy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartowyContext startowy() throws RecognitionException {
		StartowyContext _localctx = new StartowyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startowy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			classDeclaration();
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public List<TerminalNode> Nazwa() { return getTokens(GrammarInitParser.Nazwa); }
		public TerminalNode Nazwa(int i) {
			return getToken(GrammarInitParser.Nazwa, i);
		}
		public List<TerminalNode> Liczba_calk() { return getTokens(GrammarInitParser.Liczba_calk); }
		public TerminalNode Liczba_calk(int i) {
			return getToken(GrammarInitParser.Liczba_calk, i);
		}
		public List<TerminalNode> Liczba_zmiennoprzecin() { return getTokens(GrammarInitParser.Liczba_zmiennoprzecin); }
		public TerminalNode Liczba_zmiennoprzecin(int i) {
			return getToken(GrammarInitParser.Liczba_zmiennoprzecin, i);
		}
		public TerminalNode EQUALS() { return getToken(GrammarInitParser.EQUALS, 0); }
		public TerminalNode NOT_EQUALS() { return getToken(GrammarInitParser.NOT_EQUALS, 0); }
		public TerminalNode SMALLER() { return getToken(GrammarInitParser.SMALLER, 0); }
		public TerminalNode BIGGER() { return getToken(GrammarInitParser.BIGGER, 0); }
		public TerminalNode SMALLER_OR_EQUAL() { return getToken(GrammarInitParser.SMALLER_OR_EQUAL, 0); }
		public TerminalNode BIGGER_OR_EQUAL() { return getToken(GrammarInitParser.BIGGER_OR_EQUAL, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_la = _input.LA(1);
			if ( !(((((_la - 86)) & ~0x3f) == 0 && ((1L << (_la - 86)) & ((1L << (Liczba_calk - 86)) | (1L << (Nazwa - 86)) | (1L << (Liczba_zmiennoprzecin - 86)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(54);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALS) | (1L << NOT_EQUALS) | (1L << SMALLER) | (1L << BIGGER) | (1L << SMALLER_OR_EQUAL) | (1L << BIGGER_OR_EQUAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(55);
			_la = _input.LA(1);
			if ( !(((((_la - 86)) & ~0x3f) == 0 && ((1L << (_la - 86)) & ((1L << (Liczba_calk - 86)) | (1L << (Nazwa - 86)) | (1L << (Liczba_zmiennoprzecin - 86)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(GrammarInitParser.ASSIGN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<TerminalNode> Nazwa() { return getTokens(GrammarInitParser.Nazwa); }
		public TerminalNode Nazwa(int i) {
			return getToken(GrammarInitParser.Nazwa, i);
		}
		public TerminalNode Liczba_zmiennoprzecin() { return getToken(GrammarInitParser.Liczba_zmiennoprzecin, 0); }
		public TerminalNode Liczba_calk() { return getToken(GrammarInitParser.Liczba_calk, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR_INIT:
				{
				setState(57);
				variable();
				}
				break;
			case Nazwa:
				{
				setState(58);
				match(Nazwa);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(61);
			match(ASSIGN);
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(62);
				match(Nazwa);
				}
				break;
			case 2:
				{
				setState(63);
				match(Liczba_zmiennoprzecin);
				}
				break;
			case 3:
				{
				setState(64);
				match(Liczba_calk);
				}
				break;
			case 4:
				{
				setState(65);
				function_call();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statContext extends ParserRuleContext {
		public TerminalNode IF_INIT() { return getToken(GrammarInitParser.IF_INIT, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(GrammarInitParser.LEFT_BRACKET, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(GrammarInitParser.RIGHT_BRACKET, 0); }
		public TerminalNode LEFT_CURVY_BRACKET() { return getToken(GrammarInitParser.LEFT_CURVY_BRACKET, 0); }
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode RIGHT_CURVY_BRACKET() { return getToken(GrammarInitParser.RIGHT_CURVY_BRACKET, 0); }
		public List<Else_statContext> else_stat() {
			return getRuleContexts(Else_statContext.class);
		}
		public Else_statContext else_stat(int i) {
			return getRuleContext(Else_statContext.class,i);
		}
		public If_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterIf_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitIf_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitIf_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_statContext if_stat() throws RecognitionException {
		If_statContext _localctx = new If_statContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_if_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(IF_INIT);
			setState(69);
			match(LEFT_BRACKET);
			setState(70);
			condition();
			setState(71);
			match(RIGHT_BRACKET);
			setState(72);
			match(LEFT_CURVY_BRACKET);
			setState(73);
			instruction();
			setState(74);
			match(RIGHT_CURVY_BRACKET);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSE_INIT) {
				{
				{
				setState(75);
				else_stat();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_statContext extends ParserRuleContext {
		public TerminalNode ELSE_INIT() { return getToken(GrammarInitParser.ELSE_INIT, 0); }
		public TerminalNode LEFT_CURVY_BRACKET() { return getToken(GrammarInitParser.LEFT_CURVY_BRACKET, 0); }
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode RIGHT_CURVY_BRACKET() { return getToken(GrammarInitParser.RIGHT_CURVY_BRACKET, 0); }
		public Else_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterElse_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitElse_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitElse_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_statContext else_stat() throws RecognitionException {
		Else_statContext _localctx = new Else_statContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_else_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(ELSE_INIT);
			setState(82);
			match(LEFT_CURVY_BRACKET);
			setState(83);
			instruction();
			setState(84);
			match(RIGHT_CURVY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_loopContext extends ParserRuleContext {
		public TerminalNode WHILE_INIT() { return getToken(GrammarInitParser.WHILE_INIT, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(GrammarInitParser.LEFT_BRACKET, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(GrammarInitParser.RIGHT_BRACKET, 0); }
		public TerminalNode LEFT_CURVY_BRACKET() { return getToken(GrammarInitParser.LEFT_CURVY_BRACKET, 0); }
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode RIGHT_CURVY_BRACKET() { return getToken(GrammarInitParser.RIGHT_CURVY_BRACKET, 0); }
		public While_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterWhile_loop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitWhile_loop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitWhile_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_loopContext while_loop() throws RecognitionException {
		While_loopContext _localctx = new While_loopContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_while_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(WHILE_INIT);
			setState(87);
			match(LEFT_BRACKET);
			setState(88);
			condition();
			setState(89);
			match(RIGHT_BRACKET);
			setState(90);
			match(LEFT_CURVY_BRACKET);
			setState(91);
			instruction();
			setState(92);
			match(RIGHT_CURVY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_loopContext extends ParserRuleContext {
		public TerminalNode FOR_INIT() { return getToken(GrammarInitParser.FOR_INIT, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(GrammarInitParser.LEFT_BRACKET, 0); }
		public TerminalNode Nazwa() { return getToken(GrammarInitParser.Nazwa, 0); }
		public TerminalNode IN() { return getToken(GrammarInitParser.IN, 0); }
		public For_insideContext for_inside() {
			return getRuleContext(For_insideContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(GrammarInitParser.RIGHT_BRACKET, 0); }
		public TerminalNode LEFT_CURVY_BRACKET() { return getToken(GrammarInitParser.LEFT_CURVY_BRACKET, 0); }
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode RIGHT_CURVY_BRACKET() { return getToken(GrammarInitParser.RIGHT_CURVY_BRACKET, 0); }
		public For_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterFor_loop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitFor_loop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitFor_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_loopContext for_loop() throws RecognitionException {
		For_loopContext _localctx = new For_loopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_for_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(FOR_INIT);
			setState(95);
			match(LEFT_BRACKET);
			setState(96);
			match(Nazwa);
			setState(97);
			match(IN);
			setState(98);
			for_inside();
			setState(99);
			match(RIGHT_BRACKET);
			setState(100);
			match(LEFT_CURVY_BRACKET);
			setState(101);
			instruction();
			setState(102);
			match(RIGHT_CURVY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_insideContext extends ParserRuleContext {
		public List<TerminalNode> Liczba_calk() { return getTokens(GrammarInitParser.Liczba_calk); }
		public TerminalNode Liczba_calk(int i) {
			return getToken(GrammarInitParser.Liczba_calk, i);
		}
		public TerminalNode DOTDOT() { return getToken(GrammarInitParser.DOTDOT, 0); }
		public TerminalNode Nazwa() { return getToken(GrammarInitParser.Nazwa, 0); }
		public For_insideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_inside; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).enterFor_inside(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInitListener ) ((GrammarInitListener)listener).exitFor_inside(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarInitVisitor ) return ((GrammarInitVisitor<? extends T>)visitor).visitFor_inside(this);
			else return visitor.visitChildren(this);
		}
	}
